--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,9 @@ body {
 
 .progress-bar {
     background-color: gold;
-    font-weight: bolder;
+    color: black;
+    font-weight: bold;
+    font-size: small;
     overflow: hidden;
 }
 
@@ -206,7 +208,7 @@ div.mx-auto {
 #b .section-header {
     display: block;
     width: 100%;
-    padding-top: 3em;
+    padding-top: 2em;
     color: white;
 }
 
@@ -237,10 +239,7 @@ div.row div.card {
 }
 
 #b div.card-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    position: relative;
 }
 
 #b p.card-text {
@@ -264,9 +263,15 @@ div.row div.card {
     height: 100%;
 }
 
+.outro a:hover {
+    color: gold;
+    text-decoration: underline gold;
+}
+
 .footer h1 {
+    font-weight: bolder;
     color: white;
-    font-size: 1.1em;
+    font-size: .8em;
     margin: 0;
     padding-top: 1em;
 }
