--- a/css/style.css
+++ b/css/style.css
@@ -41,16 +41,6 @@ body {
     transition: opacity 1s, left 800ms;
 }
 
-.animated-underline-skills0 {
-    position: absolute;
-    width: 100%;
-    border: 2px solid gold;
-    left: -5em;
-    margin-top: .1rem;
-    opacity: 0;
-    transition-delay: 1s;
-    transition: opacity 1000ms, left 800ms;
-}
 
 .progress {
     margin: 0 0 3em 0;
@@ -113,7 +103,7 @@ nav.navbar {
 
 nav.navbar a {
     color: white;
-    transition: .5s ease;
+    transition:all .5s ease;
 }
 
 nav.navbar a:hover {
